--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'kotlin'
 apply plugin: 'kotlinx-serialization'
+apply plugin: 'application'
 
 repositories {
     mavenCentral()
@@ -20,11 +21,6 @@ dependencies {
     implementation "ch.qos.logback:logback-classic:1.2.5"
 }
 
-jar {
-    manifest {
-        attributes 'Main-Class': 'ru.maxbach.pocketbot.MainKt'
-    }
-
-
-    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+application {
+    mainClass = 'ru.maxbach.pocketbot.MainKt'
 }
