--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'kotlin'
 apply plugin: 'kotlinx-serialization'
-apply plugin: 'application'
 
 repositories {
     mavenCentral()
@@ -21,6 +20,15 @@ dependencies {
     implementation "ch.qos.logback:logback-classic:1.2.5"
 }
 
-application {
-    mainClass = 'ru.maxbach.pocketbot.MainKt'
+task customFatJar(type: Jar) {
+    duplicatesStrategy = DuplicatesStrategy.INCLUDE
+    manifest {
+        attributes "Main-Class": "ru.maxbach.pocketbot.MainKt"
+    }
+    archiveName("pocket_bot.jar")
+
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+    with jar
 }
