--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,8 @@ dependencies {
     implementation "io.ktor:ktor-client-core:1.6.5"
     implementation "io.ktor:ktor-client-apache:1.6.5"
 
+    implementation "io.ktor:ktor-server-netty:1.2.6"
+
     implementation "io.ktor:ktor-client-serialization:1.6.5"
     implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.2.2")
 
