--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,16 +10,16 @@ dependencies {
 
     implementation 'io.github.kotlin-telegram-bot.kotlin-telegram-bot:telegram:6.0.4'
 
-    implementation "io.ktor:ktor-client-core:1.6.5"
-    implementation "io.ktor:ktor-client-apache:1.6.5"
+    implementation 'io.ktor:ktor-client-core:1.6.7'
+    implementation 'io.ktor:ktor-client-apache:1.6.7'
 
-    implementation "io.ktor:ktor-server-netty:1.2.6"
+    implementation 'io.ktor:ktor-server-netty:1.6.7'
 
-    implementation "io.ktor:ktor-client-serialization:1.6.5"
-    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.2.2")
+    implementation 'io.ktor:ktor-client-serialization:1.6.7'
+    implementation('org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2')
 
-    implementation "io.ktor:ktor-client-logging:1.6.5"
-    implementation "ch.qos.logback:logback-classic:1.2.5"
+    implementation 'io.ktor:ktor-client-logging:1.6.7'
+    implementation 'ch.qos.logback:logback-classic:1.2.10'
 }
 
 task customFatJar(type: Jar) {
